--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.1.0",
     "@babel/runtime-corejs2": "7.1.2",
+    "@types/pretty-ms": "3.2.0",
     "ascii-table": "0.0.9",
     "async": "2.6.1",
     "babel-loader": "8.0.4",
@@ -138,6 +139,7 @@
     "os-locale": "2.1.0",
     "parse-json": "4.0.0",
     "pkg-up": "2.0.0",
+    "pretty-ms": "4.0.0",
     "promptly": "2.2.0",
     "propose": "0.0.5",
     "pump": "3.0.0",
